Sun Jun 18 03:47:58 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay. Thanks to richlowe and me, the bg setting is getting
	pretty cool now. It uses eesh under E, but if it can't find it,
	nicely falls back to X calls. There are more options to come
	(choosing which desktop etc), but for now, things are pretty sweet
	;-)

Sun Jun 18 01:29:16 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* The first part of some background setting code from richlowe 
	<richlowe@btinternet.com> - more to come, it'll be sweet.
	* Doesn't work yet btw, so don't get excited ;)

Sun Jun 18 00:40:28 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* New option, --rcfile FILE. Uses FILE instead of the normal
	~/.fehrc or /etc/fehrc for parsing configs/themes from.

Sun Jun 18 00:26:06 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now feh will write a default ~/.fehrc if none is found, but only
	if there is no /etc/fehrc in place already.

Sat Jun 17 23:46:32 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* A couple of nice new menu bgs from pabsmonkey.
	* The example.fehrc has theme entries for them, so if you copy it
	to ~/.fehrc, using feh --theme brushed will use the brushed menu
	bg. Same for --theme chrome.

Sat Jun 17 12:57:49 PDT 2000 Paul Duncan <pabs@pablotron.org>
   
   * wget is now quiet by default (wget -q). it's verbose if the
   -V or --verbose flag is passed to feh.  Your terminal will
   thank you.
   * mirrored the same change too cam.  cam -V or cam --verbose
   will enable verbose mode for feh and the forked wgets.
   * the second mouse button now zooms again, and the third button
   pans.
   * added menu-button option too (-4 or --menu-button). ctrl+the
   menu button brings up the menu.  defaults to the right mouse
   button, and you can set it to 0 for any button (including ones
   >3, there's no bounds checking).  This feature is disabled by
   the -N or --no-menus flag.

Sat Jun 17 20:41:24 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
